--- a/src/components/AboutAuthor/AboutAuthor.module.css
+++ b/src/components/AboutAuthor/AboutAuthor.module.css
@@ -52,3 +52,14 @@ font-family: "Roboto", sans-serif; */
     font-size: 22px;
     font-family: "Roboto", sans-serif; 
 }
+
+
+@media all and (max-width:820px){
+    .container h2{
+        font-size: 30px;
+        padding: 50px 0px 30px;
+    }
+    .about_main{
+        margin: 0px 30px;
+    }
+}
