--- a/src/components/Benefits/Benefits.module.css
+++ b/src/components/Benefits/Benefits.module.css
@@ -56,3 +56,9 @@
     75% { transform: translateX(-5px); }
     100% { transform: translateX(0); }
 }
+
+@media all and (max-width:820px){
+    .benefits_main h2{
+        font-size: 30px;
+    }
+}
