--- a/src/components/Feedbacks/Feedbacks.module.css
+++ b/src/components/Feedbacks/Feedbacks.module.css
@@ -1,15 +1,35 @@
+/* font-family: "Ubuntu", sans-serif;
+font-family: "Roboto", sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Ubuntu:ital,wght@0,300;0,400;1,400&display=swap');
+
 .container{
     width: 70%;
     margin: 0 auto;
     padding: 100px 0px 50px;
 }
+.container h2{
+    text-align: center;
+    font-size: 40px;
+    color: #252B42;
+    font-family: "Ubuntu", sans-serif;
+    padding: 50px 0px 60px;
+    position: relative;
+}
+.container h2::after{
+    content: '';
+    position: absolute;
+    width: 95px;
+    height: 7px;
+    background-color: #252B42;
+    left: 50%;
+    top: 0;
+    transform: translateX(-50%)
+}
+
 .main_container_feedbacks{
     background-color: #FAFAFA;
 }
 
-.card_container{
-
-}
 .feedback_container{
     display: flex;
     flex-direction: column;
