--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,6 +10,7 @@ font-family: "Roboto", sans-serif; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    margin: 0px 45px;
 }
 
 .text{
@@ -80,4 +81,32 @@ font-family: "Roboto", sans-serif; */
     0% { transform: scale(1); }
     50% { transform: scale(1.1); }
     100% { transform: scale(1); }
+}
+
+@media all and (max-width:970px){
+    .hero img{
+       width: 450px;
+       height: 530px;
+    }
+    .pretitle h1{
+        font-size: 35px;
+    }
+    .main_header{
+        display: flex;
+        justify-content: flex-end;
+        height: 550px;
+    }
+    .container{
+        justify-content: flex-end;
+    }
+}
+
+@media all and (max-width:820px){
+    .hero img{
+       width: 350px;
+       height: 420px;
+    }
+    .container{
+        gap: 20px;
+    }
 }
