--- a/src/components/AboutAuthor/AboutAuthor.module.css
+++ b/src/components/AboutAuthor/AboutAuthor.module.css
@@ -5,40 +5,30 @@ font-family: "Roboto", sans-serif; */
 
 .container{
     background-color: #FAFAFA;
-    padding: 70px 0px;
+    padding: 30px 0px 80px;
 }
 .container h2{
     text-align: center;
-    font-size: 40px;
-    color: #252B42;
+    font-size: 42px;
+    color: #606060;
     font-family: "Ubuntu", sans-serif;
     padding: 50px 0px 60px;
-    position: relative;
+    font-weight: 400;
 }
-.container h2::after{
-    content: '';
-    position: absolute;
-    width: 95px;
-    height: 7px;
-    background-color: #252B42;
-    left: 50%;
-    top: 0;
-    transform: translateX(-50%)
-}
+
 .about_main{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
+}
+.about_text_title{
+    width: 600px;
 }
 .about_text_title p{
     font-size: 22px;
     font-family: "Roboto", sans-serif; 
 }
-.about_text_title span{
-    font-size: 25px;
-    font-weight: 500;
-    color: #96BB7C;
-}
+
 .boom{
     animation: fadeIn 2s ease-in-out infinite;
 }
