--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -14,6 +14,7 @@ font-family: "Roboto", sans-serif; */
     transition: all 0.5s ease;
     cursor: pointer;
     position: relative;
+    margin-right: 20px;
 }
 .href::after {
     content: ''; 
@@ -44,7 +45,7 @@ font-family: "Roboto", sans-serif; */
 
 
 .container{
-    max-width: 1024px;
+    max-width: 1243px;
     width: 100%;
 }
 .button{
