--- a/src/components/Feedbacks/Feedbacks.module.css
+++ b/src/components/Feedbacks/Feedbacks.module.css
@@ -5,41 +5,26 @@ font-family: "Roboto", sans-serif; */
 .container{
     width: 70%;
     margin: 0 auto;
-    padding: 100px 0px 50px;
+    padding: 45px 0px 50px;
 }
 .container h2{
     text-align: center;
-    font-size: 40px;
-    color: #252B42;
+    font-size: 42px;
+    color: #606060;
     font-family: "Ubuntu", sans-serif;
     padding: 50px 0px 60px;
-    position: relative;
-}
-.container h2::after{
-    content: '';
-    position: absolute;
-    width: 95px;
-    height: 7px;
-    background-color: #252B42;
-    left: 50%;
-    top: 0;
-    transform: translateX(-50%)
+    font-weight: 400;
 }
 
-.main_container_feedbacks{
-    background-color: #FAFAFA;
-}
 
 .feedback_container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    max-width: 300px;
-    height: 250px;
-    padding: 10px;
-    box-shadow: 0px 9px 10px rgba(0.4, 0.1, 0.1, 0.2);
-    background-color: white;
+    height: 420px;
     margin-bottom: 15px;
     margin-top: 50px;
+}
+.feedback_container img{
+    border-radius: 10px;
+    border: 1px solid #ffc107;
+    padding: 5px;
+
 }
