--- a/src/components/Program/Program.module.css
+++ b/src/components/Program/Program.module.css
@@ -3,26 +3,16 @@ font-family: "Roboto", sans-serif; */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Ubuntu:ital,wght@0,300;0,400;1,400&display=swap');
 
 .program_container{
-    background-color: #a9a9a933;
+    background: linear-gradient(to right, #FFC700, #FD7900);
     padding: 50px 0px;
 }
 .container h2{
     text-align: center;
-    font-size: 40px;
-    color: #252B42;
+    font-size: 42px;
+    color: #ffffff;
     font-family: "Ubuntu", sans-serif;
     padding: 50px 0px 60px;
-    position: relative;
-}
-.container h2::after{
-    content: '';
-    position: absolute;
-    width: 95px;
-    height: 7px;
-    background-color: #252B42;
-    left: 50%;
-    top: 0;
-    transform: translateX(-50%)
+    font-weight: 400;
 }
 
 .accordion{
@@ -37,7 +27,6 @@ font-family: "Roboto", sans-serif; */
     padding: 5px;
     margin-bottom: 7px;
     font-size: 18px;
-    box-shadow: 2px 2px 4px #96BB7C;
 }
 .accordion .item  button{
     font-size: 19px;
@@ -45,14 +34,12 @@ font-family: "Roboto", sans-serif; */
     font-weight: 700;
     background-color: transparent;
     box-shadow: none;
-    border-bottom:  1px solid #96BB7C;
     transition: all 1s ease;
 
 }
 
 .accordion .item button:active::after, 
 .accordion .item button:focus::after{
-    background-color: #96BB7C;
     border-radius: 50%; 
     transition: all 1s ease;
 }
