--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -65,6 +65,11 @@ font-family: "Roboto", sans-serif; */
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2) !important;
     outline: none !important;
 }
+@media all and (max-width:820px){
+    .container {
+        margin: 0px 30px;
+}
+}
 @media all and (max-width:770px){
     .logo{
         width: 160px;
