--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,5 +1,3 @@
-/* font-family: "Ubuntu", sans-serif;
-font-family: "Roboto", sans-serif; */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu:ital,wght@0,300;0,400;1,400&display=swap');
 
 .tertiary {
@@ -15,6 +13,7 @@ font-family: "Roboto", sans-serif; */
     cursor: pointer;
     position: relative;
     margin-right: 20px;
+    text-decoration: none;
 }
 .href::after {
     content: ''; 
@@ -50,9 +49,6 @@ font-family: "Roboto", sans-serif; */
 }
 .button{
     border: none;
-    border-radius: 10px;
-    background-color: #8FBC0E;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 .button:hover,
 .button:active,
@@ -65,17 +61,18 @@ font-family: "Roboto", sans-serif; */
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2) !important;
     outline: none !important;
 }
-@media all and (max-width:820px){
+@media all and (max-width:840px){
     .container {
         margin: 0px 30px;
 }
 }
 @media all and (max-width:770px){
     .logo{
-        width: 160px;
+        width: 190px;
     }
 }
 @media all and (max-width:450px){
+
     .tertiary {
         padding: 20px 0px;
         margin: 0px;
@@ -83,7 +80,6 @@ font-family: "Roboto", sans-serif; */
     .tertiary .container{
         z-index: 100;
         background-color: white;
-        padding: 5px 30px;
     }
     .button{
         z-index: 100;
