--- a/src/components/PayBlock/PayBlock.module.css
+++ b/src/components/PayBlock/PayBlock.module.css
@@ -74,7 +74,7 @@ background: none;
         max-width: 650px;
         flex-direction: column;
         height: 100%;
-        padding: 10px;
+        padding: 25px 0px;
     }
 }
 @media all and (max-width: 650px){
