--- a/src/components/PayBlock/PayBlock.module.css
+++ b/src/components/PayBlock/PayBlock.module.css
@@ -47,7 +47,7 @@ font-family: "Ubuntu", sans-serif;
 }
 .button_style{
     background-color: #82AF00;
-    padding: 15px 40px;
+    padding: 10px;
     border-radius: 30px;
     transition: all 2s ease;
     text-align: center;
@@ -72,7 +72,7 @@ background: none;
 }
 .credit{
     background-color: #FD7900;
-    padding: 15px 40px;
+    padding: 10px;
     border-radius: 30px;
     transition: all 2s ease;
     margin-top: 20px;
@@ -82,6 +82,7 @@ background: none;
     color: white;
     transition: all 2s ease;
     background: none;
+    text-align: center;
     }
 .credit:hover,
 .credit a:hover {
@@ -100,6 +101,7 @@ background: none;
         flex-direction: column;
         height: 100%;
         padding: 25px 0px;
+        text-align: center;
     }
 }
 @media all and (max-width: 650px){
